--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
             <div class="starB2"></div>
             <div class="starB3"></div>
         </div>
-        
+        <div class="primera">
+            <h2 class="star1">2003</h2>
+        </div>
+        <div class="segunda">
+            <h2 class="star2">2018</h2>
+        </div>
+       <!--  <div class="segunda">
+            <h2>2018</h2>
+        </div> -->
     </div>
     
 </body>
